test/distributions/bradc/wrongDomForDist/wrongType3.good
wrongType3.chpl:7: error: associative domains not supported by this distribution
